changed padding for drop down menu, might fix alignment issue

--- a/css/trinity.css
+++ b/css/trinity.css
@@ -318,6 +318,7 @@ header .intro-text .intro-heading {
 
 .panel-default>.panel-heading {
 	color: #0067B2;
+  padding: 10px, 0px;
 }
 
 .panel-default {
